--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,32 @@
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
+	<context-param>
+	        <param-name>contextConfigLocation</param-name>
+	        <param-value></param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<servlet>
+        <servlet-name>matrix</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath*:matrix-servlet.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    
+	
+    <servlet-mapping>
+        <servlet-name>matrix</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+
 	<servlet>
 		<servlet-name>process</servlet-name>
 		<servlet-class>com.matrix.web.pro.ProcessShow</servlet-class>
